# Learning

./: README.md  justfile  pyproject.toml
edgeai-mlops/: Part1-AudioDataPreprocessingWithSoX.ipynb  Part2-TFV2+TFLite+ONNX+Quantization.ipynb  README.md
transformers-classification/: AdversarialPromptClassification.ipynb
